# Byard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.antigravitycli/: ad44ccd6-dd80-4310-82fe-9a02c6c3e7db.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/byard/: Cargo.toml
crates/byard-cli/: Cargo.toml
crates/byard-cli/examples/aot_atlas/: byard.toml
crates/byard-cli/examples/aot_atlas/src/: main.byd
crates/byard-cli/examples/callbacks/: byard.toml
crates/byard-cli/examples/callbacks/src/: main.byd
crates/byard-cli/examples/canvas_shapes/: byard.toml
crates/byard-cli/examples/canvas_shapes/src/: main.byd
crates/byard-cli/examples/checkbox/: byard.toml
crates/byard-cli/examples/checkbox/src/: main.byd
crates/byard-cli/examples/collapse_header/: byard.toml
crates/byard-cli/examples/collapse_header/src/: main.byd
crates/byard-cli/examples/data_ops/: byard.toml
crates/byard-cli/examples/data_ops/src/: main.byd
crates/byard-cli/examples/frosted_glass/: byard.toml
crates/byard-cli/examples/frosted_glass/src/: main.byd
crates/byard-cli/examples/grid/: byard.toml
crates/byard-cli/examples/grid/src/: main.byd
crates/byard-cli/examples/hot_reload_icon/: byard.toml
crates/byard-cli/examples/hot_reload_icon/src/: main.byd
crates/byard-cli/examples/radio_button/: byard.toml
crates/byard-cli/examples/radio_button/src/: main.byd
crates/byard-cli/examples/ripple/: byard.toml
crates/byard-cli/examples/ripple/src/: main.byd
crates/byard-cli/examples/scroll_snap/: byard.toml
crates/byard-cli/examples/scroll_snap/src/: main.byd
crates/byard-cli/examples/scrollview/: byard.toml
crates/byard-cli/examples/scrollview/src/: main.byd
crates/byard-cli/examples/shadows/: byard.toml
crates/byard-cli/examples/shadows/src/: main.byd
crates/byard-cli/examples/style_states/: byard.toml
crates/byard-cli/examples/style_states/src/: main.byd
crates/byard-cli/examples/text_wrap/: byard.toml
crates/byard-cli/examples/text_wrap/src/: main.byd
crates/byard-cli/examples/theme/: byard.toml
crates/byard-cli/examples/theme/src/: main.byd
crates/byard-cli/examples/todo/: byard.toml
crates/byard-cli/examples/todo/src/: main.byd
crates/byard-cli/examples/workspace/: README.md
crates/byard-cli/examples/workspace/app/: byard.toml
crates/byard-cli/examples/workspace/app/src/: main.byd  widgets.byd
crates/byard-cli/examples/workspace/kit/: byard.toml
crates/byard-cli/examples/workspace/kit/src/: lib.byd
crates/byard-cli/examples/zstack/: byard.toml
crates/byard-cli/examples/zstack/src/: main.byd
crates/byard-cli/src/: deps.rs  main.rs  manifest.rs  telemetry_overlay.rs
crates/byard-cli/src/commands/: add.rs  build.rs  check.rs  clean.rs  dev.rs  get.rs  mod.rs  new.rs
crates/byard-cli/tests/: callbacks_example.rs  checkbox_example.rs  collapse_header_example.rs  data_ops_example.rs  frosted_glass_example.rs  grid_example.rs  radio_button_example.rs  ripple_example.rs  scroll_snap_example.rs  style_states_example.rs  text_wrap_example.rs  todo_example.rs  workspace_example.rs  zstack_example.rs
crates/byard-compiler/: Cargo.toml
crates/byard-compiler/examples/: hello_world.byd  msdf_preview.rs  overlay_demo.byd  reactive_demo.byd  user_views.byd
crates/byard-compiler/src/: diagnostics.rs  infer.rs  lib.rs  symbol.rs  util.rs
crates/byard-compiler/src/interp/: anim.rs  bridge.rs  env.rs  eval.rs  events.rs  intrinsics.rs  mod.rs  reactive.rs  reload.rs  style.rs  theme.rs  views.rs
crates/byard-compiler/src/interp/reactive/: tests.rs
crates/byard-compiler/src/lexer/: mod.rs
crates/byard-compiler/src/parser/: ast.rs  expr.rs  mod.rs  tests.rs
crates/byard-compiler/src/resolve/: mod.rs  rebase.rs
crates/byard-compiler/src/vector/: aot.rs  cache.rs  generate.rs  jit.rs  mod.rs  pack.rs  validate.rs
crates/byard-compiler/tests/: all_events.rs  callback_props.rs  disabled_gate.rs  ecosystem_vector_wrapper.rs  event_exposure.rs  fuzz.rs  hello_world.rs  input_hit_test.rs  runner_loop.rs  user_views.rs
crates/byard-core/: Cargo.toml
crates/byard-core/benches/: atlas.rs  evaluator.rs  spatial.rs
crates/byard-core/examples/: hello_world.rs
crates/byard-core/src/: engine.rs  frame.rs  lib.rs  platform.rs  relay.rs  telemetry.rs  text.rs
crates/byard-core/src/atlas/: layout.rs  mod.rs  spatial.rs
crates/byard-core/src/bridge/: mod.rs
crates/byard-core/src/encoder/: backdrop.rs  backdrop.wgsl  blur.wgsl  canvas_shape.rs  canvas_shape.wgsl  decorated_box.rs  decorated_box.wgsl  gpu_timer.rs  mod.rs  ripple.rs  ripple.wgsl  solid_box.wgsl  text_glyph.rs  texture_sampler.rs  texture_sampler.wgsl  vector_msdf.rs  vector_msdf.wgsl
crates/byard-core/src/evaluator/: arena.rs  mod.rs  signal.rs  target.rs  tick.rs
crates/byard-core/src/relay/: mod.rs
crates/byard-core/tests/: m21_pipelines.rs  m26_m27_incremental.rs  paint_transform.rs  wgsl_validation.rs
crates/byard-macro/: Cargo.toml
crates/byard-macro/src/: lib.rs
crates/byard-macro/tests/: controller.rs
crates/byard-platform/: Cargo.toml
crates/byard-platform/examples/: hello_world.rs  hello_world_byd.rs
crates/byard-platform/src/: lib.rs
crates/byard-platform/tests/: backdrop_readback.rs  canvas_shape_readback.rs  render_readback.rs  ripple_readback.rs  z_order_readback.rs
crates/byard/src/: lib.rs
crates/byld-lsp/: Cargo.toml
crates/byld-lsp/src/: main.rs
docs/rfcs/: 0000-template.md  0001-core-architecture.md  0001-erratum-byld-surface.md  0001-erratum-controller-boundary.md  0001-erratum-vector-pipeline.md  0002-byld-compiler-pipeline.md  0002-byld-language-and-compiler-pipeline.md  0003-interactive-events-and-view-mutation.md  0004-reactive-interpreter.md  0005-intrinsic-view-catalog.md  0006-cli-and-dev-runner.md  0007-user-view-instantiation.md  0008-package-ecosystem.md  0009-vector-and-icon-subsystem.md  0010-implicit-granular-animations.md  (+20 more)
(+12 files in other folders)
