[package]
name = "byard-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
logos = "0.14"
byard-core = { path = "../byard-core" }

[lints]
workspace = true
