[package]
name = "byard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo = "3"
taffy = "0.10"
rustc-hash = "2"
smallvec = "1"
wgpu = "29.0"
bytemuck = { version = "1.14", features = ["derive"] }
glyphon = "0.11"
# Relay subsystem (RFC-0001 §5): lock-free Arc<RenderFrame> publish/subscribe,
# zero-allocation-steady-state frame recycling, and the async I/O pool.
arc-swap = "1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[lints]
workspace = true

[[bench]]
name = "evaluator"
harness = false

[[bench]]
name = "atlas"
harness = false

[[bench]]
name = "spatial"
harness = false
