[package]
name = "byard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo = "3"
taffy = "0.10"
rustc-hash = "2"
smallvec = "1"
wgpu = "29.0"
bytemuck = { version = "1.14", features = ["derive"] }
glyphon = "0.11"
# Relay subsystem (RFC-0001 §5): lock-free Arc<RenderFrame> publish/subscribe,
# zero-allocation-steady-state frame recycling, and the async I/O pool.
arc-swap = "1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
# Image decode for the `TextureSampler` pipeline (M21, IMPL-32). PNG/JPEG only
# keeps the dependency tree small; the runner/host owns decode, not the interp.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
# Blocks on the async wgpu device request inside headless pipeline tests (M21).
pollster = "0.4"

[features]
default = ["telemetry"]
# Zero-allocation profiler (RFC-0013): `profile_scope!` compiles to nothing
# when this is off, so a release build pays exactly zero cost for it.
telemetry = []

[lints]
workspace = true

[[bench]]
name = "evaluator"
harness = false

[[bench]]
name = "atlas"
harness = false

[[bench]]
name = "spatial"
harness = false
