[package]
name = "byard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
byard-core = { path = "../byard-core" }
byard-macro = { path = "../byard-macro" }

[lints]
workspace = true
